[project]
name 		= 'nnspy'
version 	= '0.1.0'
authors		= [
    { name = 'Paolo Baldini', email    = 'paolo.baldini.phd@gmail.com' }
]
description	= 'Python wrapper of the NNs.C library'
classifiers	= [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3.9',
    'Topic :: Scientific/Engineering :: Physics',
    'Topic :: Software Development :: Libraries'
]

[project.urls]
"GitHub"	= 'https://github.com/p-baldini/nns.py'

[build-system]
requires	= [
    'setuptools'
]
build-backend 	= "setuptools.build_meta"
